--- a/doc/tacium_main_api.yml
+++ b/doc/tacium_main_api.yml
@@ -14,7 +14,11 @@ externalDocs:
   description: Find out more about Tacium
   url: https://tacium.com
 servers:
-- url: https://main.tacium.com/v1
+- url: http://localhost:5212
+- url: https://poker.tacium.com/
+- url: https://demo.tacium.com/
+- url: https://showcase.tacium.com/
+- url: https://beta1.tacium.com/
 security:
   - token: []
 tags:
